[package]
name = "fzf"
version = "1.0.0"
edition = "2024"

[lib]
name = "fzf"
path = "src/lib.rs"

[dependencies]
array-init = "^2.0"
rmp = "^0.8"
tiny_http = "^0.12"
url = "^2.5"

[dev-dependencies]
criterion = { version = "^0.8", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true
